Implemented Grafanders features into Grafana 10.1.5

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -1657,3 +1657,10 @@ hidden_toggles =
 
 # Disables updating specific feature toggles in the feature management page
 read_only_toggles =
+
+#################################### Grafanders ############################################
+
+[grafanders]
+custom_stylesheet=
+kiosk_mode=
+disable_keybindings=false
